--- a/src/main/resources/fhj/swengb/project/remoty/TreeViewTest.fxml
+++ b/src/main/resources/fhj/swengb/project/remoty/TreeViewTest.fxml
@@ -5,8 +5,8 @@
 <?import javafx.scene.layout.*?>
 
 
-<BorderPane fx:id="border_pane" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="480.0" prefWidth="609.0" xmlns="http://javafx.com/javafx/8.0.66" xmlns:fx="http://javafx.com/fxml/1" fx:controller="fhj.swengb.project.remoty.RemotyAppController">
-   <center>
-      <TreeView prefHeight="200.0" prefWidth="200.0" BorderPane.alignment="CENTER" />
-   </center>
-</BorderPane>
+<Pane fx:id="pane_view" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="481.0" prefWidth="603.0" fx:controller="fhj.swengb.project.remoty.RemotyAppController" xmlns="http://javafx.com/javafx/8.0.66" xmlns:fx="http://javafx.com/fxml/1">
+   <children>
+      <TreeView fx:id="tree_view" layoutX="32.0" layoutY="68.0" prefHeight="345.0" prefWidth="518.0" />
+   </children>
+</Pane>
