--- a/src/main/resources/fhj/swengb/project/remoty/GUI_1.0.fxml
+++ b/src/main/resources/fhj/swengb/project/remoty/GUI_1.0.fxml
@@ -4,10 +4,11 @@
 <?import javafx.scene.control.*?>
 <?import javafx.scene.layout.*?>
 
-<Pane fx:id="pane_view" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="671.0" prefWidth="1000.0" xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1" fx:controller="fhj.swengb.project.remoty.RemotyAppController">
-   <children>
-      <TreeView fx:id="tree_view" layoutX="24.0" layoutY="98.0" prefHeight="535.0" prefWidth="287.0" />
-      <Button fx:id="chooserButton" layoutX="24.0" layoutY="42.0" mnemonicParsing="false" text="Choose Root" />
-      <Label fx:id="rootLabel" layoutX="127.0" layoutY="46.0" />
-   </children>
+<Pane fx:id="pane_view" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="671.0" prefWidth="1200.0" xmlns="http://javafx.com/javafx/8.0.40" xmlns:fx="http://javafx.com/fxml/1" fx:controller="fhj.swengb.project.remoty.RemotyAppController">
+    <children>
+        <TreeView fx:id="tree_view" layoutX="24.0" layoutY="98.0" prefHeight="535.0" prefWidth="287.0" />
+        <Button fx:id="chooserButton" layoutX="24.0" layoutY="42.0" mnemonicParsing="false" text="Choose Root" />
+        <Label fx:id="rootLabel" layoutX="127.0" layoutY="46.0" />
+        <ListView fx:id="details" layoutX="1000.0" layoutY="98.0" prefHeight="270.0" prefWidth="190.0" />
+    </children>
 </Pane>
