--- a/src/main/resources/fhj/swengb/project/remoty/GUI_1.0.fxml
+++ b/src/main/resources/fhj/swengb/project/remoty/GUI_1.0.fxml
@@ -9,6 +9,7 @@
         <TreeView fx:id="tree_view" layoutX="24.0" layoutY="98.0" prefHeight="535.0" prefWidth="287.0" />
         <Button fx:id="chooserButton" layoutX="24.0" layoutY="42.0" mnemonicParsing="false" text="Choose Root" />
         <Label fx:id="rootLabel" layoutX="127.0" layoutY="46.0" />
-        <ListView fx:id="details" layoutX="1000.0" layoutY="98.0" prefHeight="270.0" prefWidth="190.0" />
+        <ListView fx:id="details" layoutX="1000.0" layoutY="98.0" prefHeight="270.0" prefWidth="205.0" />
+        <Button fx:id="refresh_btn" layoutX="280.0" layoutY="71.0" mnemonicParsing="false" prefHeight="25.0" prefWidth="20.0" />
     </children>
 </Pane>
