--- a/src/main/resources/fhj/swengb/project/remoty/GUI_1.0.fxml
+++ b/src/main/resources/fhj/swengb/project/remoty/GUI_1.0.fxml
@@ -7,10 +7,10 @@
 <Pane fx:id="pane_view" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="671.0" prefWidth="1200.0" xmlns="http://javafx.com/javafx/8.0.40" xmlns:fx="http://javafx.com/fxml/1" fx:controller="fhj.swengb.project.remoty.RemotyAppController">
     <children>
         <TreeView fx:id="tree_view" layoutX="24.0" layoutY="98.0" prefHeight="535.0" prefWidth="287.0" />
-        <Button id="font-button" fx:id="chooserButton" layoutX="24.0" layoutY="42.0" mnemonicParsing="false" text="Choose Root" />
-        <Label fx:id="rootLabel" layoutX="127.0" layoutY="46.0" />
+        <Button fx:id="chooserButton" layoutX="24.0" layoutY="35.0" mnemonicParsing="false" text="Choose Root" />
+        <Label fx:id="rootLabel" layoutX="127.0" layoutY="35.0" />
         <ListView fx:id="details" layoutX="1000.0" layoutY="98.0" prefHeight="170.0" prefWidth="205.0" />
-        <Button id="font-button" fx:id="refresh_btn" layoutX="280.0" layoutY="71.0" mnemonicParsing="false" prefHeight="25.0" prefWidth="20.0" />
+        <Button fx:id="refresh_btn" layoutX="275.0" layoutY="69.0" mnemonicParsing="false" prefHeight="25.0" prefWidth="20.0" />
         <Label fx:id="Songlabel" alignment="CENTER_RIGHT" contentDisplay="RIGHT" layoutX="747.0" layoutY="14.0" prefHeight="37.0" prefWidth="439.0" text="Songname" textAlignment="RIGHT" visible="false" />
         <Button fx:id="ppButton" layoutX="1120.0" layoutY="51.0" mnemonicParsing="false" text="" visible="false" />
     </children>
